--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
 
@@ -341,17 +344,21 @@
 
     <section class="modal modal-mail" id="mailform_index">
       <form class="mail-form" action="/" method="post">
-        <div class="mail-form-part">
+        <div class="form-block">
           <label class="mail-form-label" for="mail-form-name">Ваше имя:</label>
           <input class="half-size" type="text" name="name" placeholder="Имя Фамилия" id="mail-form-name">
+        </div>
+        <div class="form-block">
           <label class="mail-form-label" for="mail-form-email">Ваш e-mail:</label>
           <input class="half-size" type="text" name="e-mail" placeholder="email@example.com" id="mail-form-email">
         </div>
-        <div class="mail-form-part">
+        <div class="form-block form-block-full">
           <label class="mail-form-label" for="mail-text">Текст письма:</label>
           <textarea class="mail-form-textarea" rows="3" id="mail-text" placeholder="В свободной форме"></textarea>
         </div>
-        <button class="button" type="submil">Отправить</button>
+        <div class="form-block form-block-full form-block__button">
+          <button class="button" type="submil">Отправить</button>
+        </div>
       </form>
       <button class="close-button" type="button">Закрыть</button>
     </section>
