Начальная стилизация главной страницы

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="header-center">
-        	<h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        	<h1 class="header_shop-main-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
         	<div class="header_adress">
             <a class="header_adress-tel-number" href="tel:+78125550555" aria-label="Номер телефона магазина">+7 (812) 555-05-55</a>
             <p class="header_adress-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -68,28 +68,28 @@
 
     <main>
       <div class="main_products-menu">
-          <div class="main_products-menu_item">
+          <div class="main_products-menu_item products-menu_materials">
               <h3 class="main_products-menu_item-title">Материалы</h3>
               <img src="img/icon-1.svg" width="44" height="65" alt="Материалы">
               <a class="main_products-menu_button" href="materials.html" title="Материалы">На любой вкус</a>
               <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
           </div>
-          <div class="main_products-menu_item">
+          <div class="main_products-menu_item products-menu_tools">
               <h3 class="main_products-menu_item-title">Инструмент</h3>
               <img src="img/icon-2.svg" width="75" height="61" alt="Инструмент">
               <a class="main_products-menu_button" href="tools.html" title="Инструмент">На все случаи</a>
           </div>
-          <div class="main_products-menu_item">
+          <div class="main_products-menu_item products-menu_machinery">
               <h3 class="main_products-menu_item-title">Техника</h3>
               <img src="img/icon-3.svg" width="78" height="62" alt="Техника">
               <a class="main_products-menu_button" href="machinery.html" title="Техника">Для стройки</a>
           </div>
-          <div class="main_products-menu_item">
+          <div class="main_products-menu_item products-menu_sales">
               <h3 class="main_products-menu_item-title">Скидки 50%</h3>
               <img src="img/icon-4.svg" width="59" height="72" alt="Скидки 50%">
               <a class="main_products-menu_button" href="sales.html" title="Скидки 50%">На 350 товаров</a>
           </div>
-          <div class="main_products-menu_item">
+          <div class="main_products-menu_item products-menu_delivery">
               <h3 class="main_products-menu_item-title">Доставка</h3>
               <img src="img/icon-5.svg" width="78" height="63" alt="Доставка">
               <a class="main_products-menu_button" href="delivery.html" title="Доставка">Бесплатно</a>
@@ -118,7 +118,7 @@
           <h2 class="main-popular-title">Популярные товары:</h2>
           <a class="button" href="#" title="">Все популярные товары</a>
         </div>
-        <ul class="main_popular-products-list">
+        <ul class="main_popular-list">
             <li class="catalog-item">
                 <a href="catalog-item.html" class="catalog-item-title" title="Перфоратор BOSCH BFG 9000">Перфоратор BOSCH BFG 9000</a>
                 <a href="catalog-item.html" class="catalog-item-image">
@@ -175,7 +175,7 @@
           <h2 class="main-popular-title">Популярные производители:</h2>
           <a class="button" href="#" title="Все производители">Все производители</a>
         </div>
-        <ul class="main_popular-brands-list">
+        <ul class="main_popular-list">
             <li class="brands-item">
                 <a href="#" title="Bosch" class="brands-link">
                     <img src="img/bosch.jpg" width="126" height="37" alt="Bosch">
