--- a/catalog.html
+++ b/catalog.html
@@ -169,8 +169,8 @@
     				<p class="catalog-item-old-price">22500 P.</p>
     				<a href="catalog-item.html" class="catalog-item-new-price" title="15500 P.">15500 P.</a>
             <div class="catalog-user-form-hidden">
-              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+              <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
             </div>
     			</li>
      			<li class="catalog-item">
@@ -181,8 +181,8 @@
      				<p class="catalog-item-old-price">30500 P.</p>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
             <div class="catalog-user-form-hidden">
-              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+              <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
             </div>
      			</li>
      			<li class="catalog-item">
@@ -192,8 +192,8 @@
             </a>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="12500 P.">12500 P.</a>
            <div class="catalog-user-form-hidden">
-             <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-             <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+             <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
+             <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
            </div>
            <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
      			</li>
@@ -205,8 +205,8 @@
      				<p class="catalog-item-old-price">22500 P.</p>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="15500 P.">15500 P.</a>
             <div class="catalog-user-form-hidden">
-              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+              <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
             </div>
      			</li>
      			<li class="catalog-item">
@@ -217,8 +217,8 @@
      				<p class="catalog-item-old-price">30500 P.</p>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
             <div class="catalog-user-form-hidden">
-              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+              <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
             </div>
             <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
      			</li>
@@ -229,8 +229,8 @@
             </a>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="12500 P.">12500 P.</a>
             <div class="catalog-user-form-hidden">
-              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+              <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
             </div>
      			</li>
      			<li class="catalog-item">
@@ -241,8 +241,8 @@
      				<p class="catalog-item-old-price">22500 P.</p>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="15500 P.">15500 P.</a>
             <div class="catalog-user-form-hidden">
-              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+              <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
             </div>
             <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
      			</li>
@@ -254,8 +254,8 @@
      				<p class="catalog-item-old-price">30500 P.</p>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
             <div class="catalog-user-form-hidden">
-              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+              <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
             </div>
      			</li>
      			<li class="catalog-item">
@@ -265,16 +265,16 @@
             </a>
      				<a href="catalog-item.html" class="catalog-item-new-price" title="12500 P.">12500 P.</a>
             <div class="catalog-user-form-hidden">
-              <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-              <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+              <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
+              <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
             </div>
      			</li>
     		</ul>
-            <ul class="catalog-pagination-list">
-                <li class="catalog-pagination-item pagination-item-current"><a class="catalog-button">1</a></li>
-                <li class="catalog-pagination-item"><a href="#" class="catalog-button">2</a></li>
-                <li class="catalog-pagination-item"><a href="#" class="catalog-button">3</a></li>
-                <li class="catalog-pagination-item"><a href="#" class="catalog-button">Следующая</a></li>
+            <ul class="pagination-list">
+                <li class="pagination-item active"><a class="catalog-button">1</a></li>
+                <li class="pagination-item"><a href="#" class="catalog-button">2</a></li>
+                <li class="pagination-item"><a href="#" class="catalog-button">3</a></li>
+                <li class="pagination-item"><a href="#" class="catalog-button">Следующая</a></li>
             </ul>
     	</section>
         <article class="main_perforator-article">
@@ -352,19 +352,20 @@
     </footer>
 
     <section class="modal modal-cart" id="modalcart_catalog">
-      <div class="modal-cart-text">
+      <div class="modal-cart-top">
         <img src="img/added-to-cart.svg" width="66" height="66" alt="">
-        Товар добавлен в корзину!
+        <span class="modal-cart-text">Товар добавлен в корзину!</span>
       </div>
-      <a class="button" href="order-form.html" alt="Оформить заказ">Оформить заказ</a> 
-      <button class="button" type="button">
-        <span class="continue-button-text">Продолжить покупки</span>
-      </button>
-      <button class="close-button" type="button">
-        <span class="close-button-text">Закрыть</span>
-      </button>
+      <div class="modal-cart-bottom">
+        <a class="button" href="order-form.html" alt="Оформить заказ">Оформить заказ</a> 
+        <button class="button continue-button" type="button">
+          <span class="continue-button-text">Продолжить покупки</span>
+        </button>
+        <button class="close-button" type="button">
+          <span class="close-button-text">Закрыть</span>
+        </button>
+      </div>
     </section>
-
   </body>
 </html>
 
