--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                 <p class="catalog-item-old-price">32500 P.</p>
                 <a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
                 <div class="catalog-user-form-hidden">
-                    <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-                    <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+                    <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
+                    <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
                 </div>
             </li>
             <li class="catalog-item">
@@ -140,8 +140,8 @@
                 <p class="catalog-item-old-price">22500 P.</p>
                 <a href="catalog-item.html" class="catalog-item-new-price" title="15500 P.">15500 P.</a>
                 <div class="catalog-user-form-hidden">
-                    <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-                    <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+                    <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
+                    <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
                 </div>
             </li>
             <li class="catalog-item">
@@ -152,8 +152,8 @@
                 <p class="catalog-item-old-price">30500 P.</p>
                 <a href="catalog-item.html" class="catalog-item-new-price" title="25500 P.">25500 P.</a>
                 <div class="catalog-user-form-hidden">
-                    <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-                    <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+                    <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
+                    <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
                 </div>
             </li>
             <li class="catalog-item">
@@ -163,8 +163,8 @@
                 </a>
                 <a href="catalog-item.html" class="catalog-item-new-price" title="12500 P.">12500 P.</a>
                 <div class="catalog-user-form-hidden">
-                    <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
-                    <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+                    <a class="catalog-user-buy-button" href="#" title="Купить">Купить</a>
+                    <a class="catalog-user-bookmark-button" href="#" title="В закладки">В закладки</a>
                 </div>
                 <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
             </li>
@@ -351,11 +351,11 @@
       <form class="mail-form" action="/" method="post">
         <div class="form-block">
           <label class="mail-form-label" for="mail-form-name">Ваше имя:</label>
-          <input class="half-size" type="text" name="name" placeholder="Имя Фамилия" id="mail-form-name">
+          <input class="half-size mail-form-input" type="text" name="name" placeholder="Имя Фамилия" id="mail-form-name">
         </div>
         <div class="form-block">
           <label class="mail-form-label" for="mail-form-email">Ваш e-mail:</label>
-          <input class="half-size" type="text" name="e-mail" placeholder="email@example.com" id="mail-form-email">
+          <input class="half-size mail-form-input" type="text" name="e-mail" placeholder="email@example.com" id="mail-form-email">
         </div>
         <div class="form-block form-block-full">
           <label class="mail-form-label" for="mail-text">Текст письма:</label>
@@ -363,7 +363,7 @@
         </div>
         <div class="form-block form-block-full form-block__button">
           <button class="button" type="submil">
-            <span class="send-button-text">Отправить</span>
+            <span class="button send-button-text">Отправить</span>
           </button>
         </div>
       </form>
@@ -375,7 +375,7 @@
     <section class="modal modal-map" id="map_index">
       <img src="img/map.jpg" width="940" height="446" alt="Офис компании знаходится по адресу ул. Большая Конюшенная 19/8, город Санкт-Петербург">
       <button class="close-button" type="button">
-        <span> class="close-button-text"Закрыть</span>
+        <span class="close-button-text">Закрыть</span>
       </button>
     </section>
 
